  "reverseComplement" methods method for DNAStringSet and RNAStringSet objects.
  They all preserve the names.

o reverse(), complement() and reverseComplement() now preserve the names when
  applied to a BStringViews object.

o By Robert: Added the dna2rna(), rna2dna(), transcribe() and cDNA() functions
  + a "reverseComplement" method for RNAString objects.

C-LEVEL FACILITIES

o Started the Biostrings C interface (work-in-progress).
  See inst/include/Biostrings_interface.h for how to use it in your package.

BASIC CONTAINERS

o Added new containers for storing a big set of sequences:
    - The XStringSet family: BStringSet, DNAStringSet, RNAStringSet and
      AAStringSet (all direct XStringSet subtypes with no additional slots).
    - The XStringList family: BStringList, DNAStringList, RNAStringList and
      AAStringList (all direct XStringList subtypes with no additional slots).
  The 2 families are almost the same from a user point of view, but the
  internal representations and method implementations are very different.
  The XStringList family was a first attempt to address the problem of storing
  a big set of sequences in an efficent manner but its performance turned out
  to be disappointing. So the XStringSet family was introduced as a response
  to the poor performance of the XStringList container.
  The XStringList family might be removed soon.

o Added the trim() function for trimming the "out of limits" views of a
  BStringViews object.

o Added "restrict", "narrow" and "reduce" generic functions with methods for
  IRanges and BStringViews objects. Also added a "mask" method for
  IRanges objects. These functions provide basic transformations of an
  IRanges object into another IRanges object of the same class.

o Added the "start<-", "width<-" and "end<-" generics with methods for
  IRanges and BStringViews objects. Also added the "update" method for
  IRanges objects to provide a convenient way of combining multiple