@@ -1,11 +1,24 @@
 \name{IUPAC_CODE_MAP}
+
 \alias{IUPAC_CODE_MAP}
+\alias{lettersToAmbiguity}
 
 
 \title{The IUPAC Extended Genetic Alphabet}
 
 \description{
   [TODO]
+}
+
+\usage{
+    IUPAC_CODE_MAP
+    lettersToAmbiguity(x)
+}
+
+\arguments{
+  \item{x}{
+    A vector of non-empty character strings made of IUPAC letters.
+  }
 }
 
 \details{
@@ -20,6 +33,7 @@
 
 \examples{
   IUPAC_CODE_MAP
+  lettersToAmbiguity(c("A", "AC", "MAAMC", "GM", "AB", "MK"))
 }
 
 \keyword{utilities}
